# Chatbot-with-RAG

./: .gitignore  main.py  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
Actions/: __init__.py  upload_documentsvector.py
models/: __init__.py  models.py
prompt/: prompts.py
