[project]
name = "folderwithrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain_community",
    "pypdf",
    "langchain_openai",
    "langchain-google-genai",
    "langchain_openrouter",
    "langchain_postgres",
    "unstructured",
    "unstructured[pdf]",
    "unstructured_inference"
]
